[package]
name = "protopathy"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["protobuf", "rpc", "client", "server"]
categories = ["command-line-interface", "network-programming"]
publish.workspace = true

[features]
default = ["std", "tcp", "tracing"]
std = []
tcp = []
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tracing = { version = "0.1", optional = true }
triggered = "0.1"
url = "2.5"

[target.'cfg(unix)'.dependencies]
